# blog

./: CNAME  about.rst  hakyll-site.cabal  index.html  site.cabal  site.hs  stack.yaml
about/: index.html
archive/: index.html
contact/: index.html
css/: a  code.css  default.css  index.hs  reveal_overrides.css  skeleton.css
css/Styles/: Code.hs
pages/: about.md  projects.html  projects.md  talks.html
posts/: 2016-04-22-updatepointer-xmonad.markdown  2016-10-09-sls-purs.md
posts/2016-04-22-updatepointer-xmonad/: index.html
presentations/: 100-components-and-counting.md  kappa_delta_lambda.md
presentations/100-components-and-counting/: index.html
presentations/kappa_delta_lambda/: index.html
projects/: index.html
talks/: index.html
templates/: default.html  post-list.html  post.html  revealjs.html
